# ESPHome-Zehnder-RF

./: .gitignore  BRAMBOE_FEATURES.md  ESP-IDF-COMPATIBILITY.md  README.md  RF_STATUS_SENSOR.md  pyproject.toml  renovate.json  renovate.json5  run-tests.sh  secrets.yaml.example  test-config-denky32-arduino.yaml  test-config-denky32-espidf.yaml  test-config.yaml  utility-bridge.yaml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: test.yml
components/nrf905/: __init__.py  nRF905.cpp
components/zehnder/: __init__.py  binary_sensor.py  fan.py  zehnder.cpp  zehnder.h
docs/: python-version-management.md
scripts/: README.md  update-python-versions.sh
tests/: README.md  test_esphome_config.py  test_espidf_compatibility.py  test_python_syntax.py  test_status_sensor.py
